# maude_db

./: .gitignore  Makefile  README.md  init_database.py  maude_db.py  possible_changes.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: fda_compatibility_check.yml  tests.yml
archive_tools/: ARCHIVING_GUIDE.md  check_fda_compatibility.py  prepare_zenodo_archive.py
binder/: postBuild
docs/: api_reference.md  getting_started.md  github_badge_setup.md  maude_overview.md  research_guide.md  selection_guide.md  sqlite_guide.md  systematic_review_guide.md  troubleshooting.md
examples/: .gitignore  README.md  analyze_device_trends.py  basic_usage.py
notebooks/: 01_getting_started.ipynb  02_grouped_search.ipynb  02_trend_analysis_visualization.ipynb  03_advanced_querying.ipynb  03_exact_queries.ipynb  04_analysis_helpers.ipynb  04_manufacturer_comparison.ipynb  05_advanced_workflows.ipynb  05_signal_detection.ipynb  06_reproducible_research_workflow.ipynb  07_helper_methods_reference.ipynb  README.md  boolean_search_examples.ipynb
src/maude_db/: __init__.py  database.py  metadata.py  processors.py
src/pymaude/: __init__.py  adjudication.py  analysis_helpers.py  database.py  processors.py  selection.py  (+2 more)
tests/: test_analysis_helpers.py  test_checksum_tracking.py  test_event_key.py  test_event_type_codes.py  test_helper_methods.py  test_malformed_lines.py  test_maude_db.py  test_maude_db_integration.py  test_query_device_exact.py  test_search_by_device_names.py  test_search_grouped.py  test_search_strategy.py  test_selection.py  test_trends.py
(+2 files in other folders)
