[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pymaude"
version = "1.0.0"
description = "PyMAUDE: FDA MAUDE Database Interface"
authors = [{name = "Jacob Schwartz", email = "jaschwa@umich.edu"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]